# padantic

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py
AcceleratorLattice/: _functions.py  element.py
PADantic/: PV_Values.yaml  element.py
PAdantic/: CATAP_test.py  Export_CATAP_YAML.py  PAdantic.py  PV_Values.yaml  debug_wrapper.py  element.py  main.py  requirements.txt  sections.yaml  test.yaml
PAdantic/Exporters/: CATAP.py  Export_CATAP_YAML.py  YAML.py
PAdantic/Importers/: CATAP_Loader.py  CLARA Magnet Table v6.xlsx  Magnet_Table.py  MySafeConstructor.py  MySafeLoader.py  SimFrame_Loader.py  YAML_Loader.py  camera_assignments.yaml
PAdantic/YAML/: ALL-LIGHTS.yaml  CLA-C2V-DIA-BPM-01.yaml  CLA-L01-LRF-CTRL-01.yaml  CLA-L01-RF-PROTE-01.yaml  CLA-LAS-DIA-EM-06.yaml  CLA-S01-DIA-CAM-01.yaml  CLA-S01-DIA-SCR-01.yaml  CLA-S01-DIA-WCM-01.yaml  CLA-S01-VAC-VALV-01.yaml  CLA-S02-DIA-FCUP-01.yaml  CLA-S02-MAG-QUAD-01.yml  EBT-INJ-LSR-SHUT-02.yaml  EBT-INJ-VAC-IMG-02.yaml  EBT-LAS-OPT-HWP-2.yaml  EBT-LAS-OPT-PM-11.yml  L01Modulator.yaml  gun.yaml  l01.yaml
PAdantic/models/: PV.py  RF.py  __init__.py  _functions.py  baseModels.py  control.py  degauss.py  diagnostic.py  electrical.py  element.py  elementList.py  exceptions.py  laser.py  lighting.py  magnetic.py  manufacturer.py  physical.py  shutter.py  simulation.py
Testing/: .gitignore  CATAP_test.py  FEBE_2_Bunches.def  cameras.py  convert_SimFrame.py  convert_yaml.py  export_to_CATAP.py  make_model_from_scratch.py  padantic.py  save_machine.py  simframe.py  test.yaml  test_currents.yaml
(+915 files in other folders)
